@@ -1,3 +1,10 @@
+2008-08-12  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-upgrade.c
+		- (nm_gconf_migrate_0_7_openvpn_properties): migrate 'shared' -> 'static'
+			too, fix missing initialization that caused connection type not to
+			get migrated
+
 2008-08-12  Tambet Ingo  <tambet@gmail.com>
 
 	* src/connection-editor/page-ip4.c (ce_page_ip4_new): Rename the 
